# project-pruner

./: .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_config.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml
docs/: configuration.md  examples.md  usage.md
src/projectpruner/: __init__.py  cli.py
src/projectpruner/config/templates/: default_config.yaml
src/projectpruner/core/: archiver.py  cleaner.py  finder.py
src/projectpruner/models/: config.py  project.py
src/projectpruner/utils/: config.py  filesystem.py  logger.py  progress.py
tests/: integration_test.py  test_cli.py
